[fix] Fixes the display of the details page on small screens (#39)

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -621,6 +621,9 @@ header{
             padding: 1rem 0;
             height: 21rem;
         }
+        @media screen and (max-width:480px){
+            min-width: 0;
+        }
     }
     h2 {
         font-weight: 300;
